Apply framework to index and link js to main,create eventlistener for button to scrape clear and save the content.

--- a/views/partials/post-block.handlebars
+++ b/views/partials/post-block.handlebars
@@ -1,5 +1,5 @@
-<li>
+<li class="list-group-item">
     <a href={{link}} target="_blank"> {{title}} </a>
-    <button class="delete-post" value={{_id}}>Delete</button>
-    <button class="save-post" value={{_id}}>Save</button>
+    <button type="button" class="btn btn-danger btn-sm delete-post" value={{_id}}>Delete</button>
+    <button type="button" class="btn btn-info btn-sm save-post" value={{_id}}>Save</button>
 </li>
