--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,40 @@
-<ul>
+<div class="cover-container d-flex w-100 h-50 p-3 mx-auto flex-column">
+<main class="inner cover text-center">
+    <div class="h-75 d-block"></div>
+    <div class="w-60 h-25 d-block">
+        <div class="row">
+            <div class="col-sm-3">
+
+            </div>
+            <div class="col-sm-2">
+                <button type="button" class="btn btn-primary action" data-value="scrape">Scrape</button>
+            </div>
+            <div class="col-sm-2">
+                <button type="button" class="btn btn-primary action" data-value="clear">Clear</button>
+            </div>
+            <div class="col-sm-2">
+                <button type="button" class="btn btn-primary action" data-value="saved">Saved</button>
+            </div>
+             <div class="col-sm-3">
+
+            </div>
+        </div>
+    </div>
+</main>
+</div>
+<div class="container">
+<div class="row">
+<div class="col-md-8">
+
+<ul class="list-group">
 {{#each posts}}
 {{>post-block}}
 {{/each}}
 </ul>
+
+</div>
+<div class="col-md-4">
+
+</div>
+</div>
+</div>
