--- a/views/partials/post-block.handlebars
+++ b/views/partials/post-block.handlebars
@@ -1,5 +1,18 @@
-<li class="list-group-item">
-    <a href={{link}} target="_blank"> {{title}} </a>
-    <button type="button" class="btn btn-danger btn-sm delete-post" value={{_id}}>Delete</button>
-    <button type="button" class="btn btn-info btn-sm save-post" value={{_id}}>Save</button>
+<li class="list-group-item" value={{_id}}>
+    <div class="container">
+        <div class="row">
+            <a href={{link}} target="_blank"> {{title}} </a>
+            <button type="button" class="btn btn-danger btn-sm delete-post" value={{_id}}>Delete</button>
+            <button type="button" class="btn btn-info btn-sm save-post" value={{_id}}>Save</button>
+            {{#if saved}}saved {{/if}}
+        </div>
+        <div class="row">
+            <div class="col=sm-9">
+                {{#each notes}}{{>note-block}}{{/each}}
+            </div>
+            <div class="col=sm-3">
+                {{>note-form}}
+            </div>
+        </div>
+    </div>
 </li>
