Change comments display

--- a/views/partials/note-block.handlebars
+++ b/views/partials/note-block.handlebars
@@ -1,4 +1,4 @@
-<div class="card" data-value={{_id}}>
+<div class="card float-sm-left" data-value={{_id}}>
     <div class="card-body">
         <h4 class="card-title">{{notetitle}}</h4>
         <p class="card-text">{{content}}</p>
