--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,10 @@
 <div class="cover-container d-flex w-100 h-50 p-3 mx-auto flex-column">
 <main class="inner cover text-center">
-    <div class="h-75 d-block"></div>
+    <div class="h-75 d-block">
+        <h1>New York Times Tech!</h1>
+        <h2>No front-end validation this time(using back-end "required" only) so don't put any empty content in commets</h2>
+        <h3>Scrape button may sometimes be slow,if nothing happens or it doesn't appears as it's supposed to be, just click it again or use home button</h3>
+    </div>
     <div class="w-60 h-25 d-block">
         <div class="row">
             <div class="col-sm-2">
