--- a/views/partials/post-block.handlebars
+++ b/views/partials/post-block.handlebars
@@ -4,13 +4,13 @@
             <a href={{link}} target="_blank"> {{title}} </a>
             <button type="button" class="btn btn-danger btn-sm delete-post" value={{_id}}>Delete</button>
             <button type="button" class="btn btn-info btn-sm save-post" value={{_id}}>Save</button>
-            {{#if saved}}saved {{/if}}
+            {{#if saved}}saved (can be icon with further efforts){{/if}}
         </div>
         <div class="row">
-            <div class="col=sm-9">
+            <div class="col-sm-9">
                 {{#each notes}}{{>note-block}}{{/each}}
             </div>
-            <div class="col=sm-3">
+            <div class="col-sm-3">
                 {{>note-form}}
             </div>
         </div>
