--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,42 +1,45 @@
-<div class="cover-container d-flex w-100 h-50 p-3 mx-auto flex-column">
-<main class="inner cover text-center">
-    <div class="h-75 d-block">
-        <h1>New York Times Tech!</h1>
-        <h2>No front-end validation this time(using back-end "required" only) so don't put any empty content in commets</h2>
-        <h3>Scrape button may sometimes be slow,if nothing happens or it doesn't appears as it's supposed to be, just click it again or use home button</h3>
-    </div>
-    <div class="w-60 h-25 d-block">
-        <div class="row">
-            <div class="col-sm-2">
 
+            <div class="row text-center">
+                <div class="col-1"></div>
+                <div class="col-10">
+                    <h1>New York Times Tech!</h1>
+                    <h2>No front-end validation in this project(using back-end "required" only) so don't put any empty content
+                        in
+                        commets</h2>
+                    <h3>Scrape button may sometimes be slow,if nothing happens or it doesn't appears as it's supposed to
+                        be,
+                        just click it again or use home button</h3>
+                </div>
+                <div class="col-1"></div>
             </div>
-            <div class="col-sm-2">
-                <button type="button" class="btn btn-primary action" data-value="home">Home</button>
-            </div>
-            <div class="col-sm-2">
-                <button type="button" class="btn btn-primary action" data-value="scrape">Scrape</button>
-            </div>
-            <div class="col-sm-2">
-                <button type="button" class="btn btn-primary action" data-value="clear">Clear</button>
-            </div>
-            <div class="col-sm-2">
-                <button type="button" class="btn btn-primary action" data-value="saved">Saved</button>
-            </div>
-             <div class="col-sm-2">
+            <div class="row">
+                <div class="col-sm-2">
 
+                </div>
+                <div class="col-sm-2">
+                    <button type="button" class="btn btn-primary action" data-value="home">Home</button>
+                </div>
+                <div class="col-sm-2">
+                    <button type="button" class="btn btn-primary action" data-value="scrape">Scrape</button>
+                </div>
+                <div class="col-sm-2">
+                    <button type="button" class="btn btn-primary action" data-value="clear">Clear</button>
+                </div>
+                <div class="col-sm-2">
+                    <button type="button" class="btn btn-primary action" data-value="saved">Saved</button>
+                </div>
+                <div class="col-sm-2">
+
+                </div>
             </div>
+<div class="container">
+    <div class="row">
+        <div class="col posts">
+            <ul class="list-group">
+                {{#each posts}}
+                {{>post-block}}
+                {{/each}}
+            </ul>
         </div>
     </div>
-</main>
-</div>
-<div class="container">
-<div class="row">
-<div class="col posts">
-<ul class="list-group">
-{{#each posts}}
-{{>post-block}}
-{{/each}}
-</ul>
-</div>
-</div>
 </div>
